--- a/freckles.css
+++ b/freckles.css
@@ -4,7 +4,7 @@ body {
     margin-right: 20%;
     border: 2px dotted black;
     padding: 10px 10px 10px 10px;
-    font-family: sans-serif;
+    font-family: Trebuchet MS, Geneva, Arial, sans-serif;
 }
 h3 {
     color:dimgrey;
